[gd_scene load_steps=18 format=3 uid="uid://cf2jxkpomwvf3"]

[ext_resource type="Script" path="res://rythm_game/SongBackground.gd" id="1"]
[ext_resource type="Script" path="res://rythm_game/rhythm_game_controller.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://q7lxigfdjdkq" path="res://rythm_game/pause_menu/PauseMenu.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://b3peah64ej2iw" path="res://menus/visualizer/Visualizer.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://4ayk4syw8k14" path="res://graphics/predarkenedbg.png" id="5"]
[ext_resource type="FontFile" path="res://fonts/Rating_Font.tres" id="7"]
[ext_resource type="Texture2D" uid="uid://bp2b0enf3mcn4" path="res://graphics/icons/fast-forward.svg" id="8"]
[ext_resource type="FontFile" uid="uid://dfpyn56qxyrpb" path="res://fonts/Default_Font.tres" id="9"]
[ext_resource type="Script" path="res://rythm_game/VideoPlayerOffset.gd" id="10"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Shader" id="3"]
code = "shader_type canvas_item;

const float range = 0.05;
const float noiseQuality = 250.0;
const float noiseIntensity = 0.0044;
const float offsetIntensity = 0.01;
const float colorOffsetIntensity = 1.3;
uniform float desaturation = 0.25;
uniform sampler2D screen_tex: hint_screen_texture, filter_linear_mipmap;

vec3 desaturate(vec3 color, float Desaturation)
{
	vec3 grayXfer = vec3(0.3, 0.59, 0.11);
	vec3 gray = vec3(dot(grayXfer, color));
	return mix(color, gray, Desaturation);
}

float rand(vec2 co)
{
    return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
}

float verticalBar(float pos, float uvY, float offset)
{
    float edge0 = (pos - range);
    float edge1 = (pos + range);

    float x = smoothstep(edge0, pos, uvY) * offset;
    x -= smoothstep(pos, edge1, uvY) * offset;
    return x;
}

void fragment()
{
	vec2 fragCoord = FRAGCOORD.xy;
	vec2 iResolution = 1.0 / SCREEN_PIXEL_SIZE;
	vec2 uv = FRAGCOORD.xy / iResolution.xy;
    
    for (float i = 0.0; i < 0.71; i += 0.1313)
    {
        float d = mod(TIME * i, 1.7);
        float o = sin(1.0 - tan(TIME * 0.24 * i));
    	o *= offsetIntensity;
        uv.x += verticalBar(d, uv.y, o);
    }
    
    float uvY = uv.y;
    uvY *= noiseQuality;
    uvY = float(int(uvY)) * (1.0 / noiseQuality);
    float noise = rand(vec2(TIME * 0.00001, uvY));
    uv.x += noise * noiseIntensity;

    vec2 offsetR = vec2(0.006 * sin(TIME), 0.0) * colorOffsetIntensity;
    vec2 offsetG = vec2(0.0073 * (cos(TIME * 0.97)), 0.0) * colorOffsetIntensity;
    
    float r = texture(screen_tex, uv + offsetR).r;
    float g = texture(screen_tex, uv + offsetG).g;
    float b = texture(screen_tex, uv).b;



    vec4 tex = vec4(desaturate(vec3(r, g, b), desaturation), 1.0);
    COLOR = tex;
}"

[sub_resource type="ShaderMaterial" id="4"]
shader = SubResource("3")
shader_parameter/desaturation = 0.25

[sub_resource type="Animation" id="5"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="6"]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sj666"]
_data = {
"appear": SubResource("5"),
"disappear": SubResource("6")
}

[sub_resource type="Environment" id="7"]

[node name="RhythmGame" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Node2D" type="Node2D" parent="."]
z_index = -100

[node name="TextureRect" type="TextureRect" parent="Node2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 6
script = ExtResource("1")

[node name="Panel" type="Panel" parent="Node2D"]
offset_right = 1280.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("1")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Node2D/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
volume_db = -80.0
autoplay = true
script = ExtResource("10")

[node name="Visualizer" parent="Node2D" instance=ExtResource("4")]
process_mode = 1
offset_right = 1280.0
offset_bottom = 720.0
ingame = true

[node name="GameUIContainer" type="Control" parent="."]
process_mode = 1
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FadeInThreen" type="Threen" parent="."]
process_mode = 1

[node name="FadeIn" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_styles/panel = SubResource("2")

[node name="FadeToBlack" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_styles/panel = SubResource("2")

[node name="FadeOutThreen" type="Threen" parent="."]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("9")
text = "asdsadsad"

[node name="VHS" type="Panel" parent="."]
visible = false
material = SubResource("4")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RollbackLabel" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="RollbackLabel"]
libraries = {
"": SubResource("AnimationLibrary_sj666")
}

[node name="VBoxContainer" type="VBoxContainer" parent="RollbackLabel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.890869
offset_bottom = -0.890869
alignment = 1

[node name="Label" type="Label" parent="RollbackLabel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7")
text = "Rolling back!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="RollbackLabel/VBoxContainer"]
layout_mode = 2
texture = ExtResource("8")
stretch_mode = 6

[node name="PauseMenu" parent="." instance=ExtResource("3")]
layout_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("7")

[connection signal="quit" from="PauseMenu" to="." method="_on_PauseMenu_quit"]
[connection signal="restarted" from="PauseMenu" to="." method="_on_PauseMenu_restarted"]
[connection signal="resumed" from="PauseMenu" to="." method="_on_resumed"]
